   This can be a good solution for photographs.
# (r948)
 * if configure'ing with --enable-c++11, background image loading will be available
  (FIXME: need controlling variable, need to handle failed loads)
# (r947)
 * mipmap computing (controlled by _use_mipmaps) is now faster
# (r1187)
   Text font can be scaled at runtime via variable _fbfont_magnify_factor.
# (r942)
 * configure --with-font-magnifying-factor=FACTOR controls text magnification.
   If FACTOR is positive this value will be hardcoded and fixed. 
# (r945)
   If FACTOR is negative, -FACTOR is default but still runtime modifiable.
   If FACTOR is 0 (default) a default of 1 will apply.
   Option meant to be used with with very high resolutions and small fonts.
# (r941)
 * FIXME: description files beginning with "#!fim:desc" (whatever extension) can now
   be detected and loaded as they were normal image files (FIXME: undocumented)
 * FIXME: did something with --enable-unicode ?
# (r936)
 * added --reverse to reverse the file list
# (r933)
 * added --sort-mtime to sort file list according to modification time
 * added --sort-fsize to sort file list according to file size
 * to list command added subcommand 'sort_mtime' to sort file list according to modification time
 * to list command added subcommand 'sort_fsize' to sort file list according to file size
# (r931)
 * added the _lastgotodirection variable, with the last file goto direction
 * key Enter will now mark and then go forward or back according to _lastgotodirection 

                Version 0.5

# (r746*)
 * -R / --recursive switch to turn on recursive push of command line specified directories
# (r669*)
 * added --sort and --sort-basename to sort the images list
 * introduced mipmap mechanism (_use_mipmaps) for faster display/scaling of images
# (r644,r651*) (undocumented) r676)
 * status bar customizable with _display_status_fmt and _info_fmt_str, which can be
   controlled by the use of special image variable specifiers ('expandos'):