@@ -104,6 +104,7 @@ class DisplayDevice
 	virtual fim_err_t resize(fim_coo_t w, fim_coo_t h);
 	virtual fim_err_t reinit(const fim_char_t *rs);
 	virtual fim_err_t set_wm_caption(const fim_char_t *msg);
+	virtual fim_coo_t suggested_font_magnification(const fim_coo_t wf, const fim_coo_t hf)const;
 };
 
 #endif /* FIM_DISPLAY_DEVICE_H */
